# fullstack-rust

./: .env.example  README.md  start_dev.sh
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: auth.rs  mod.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: main.rs
frontend/src/components/: navbar.rs
migrations/: 20221012195401_user.up.sql
