[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path= "../common"}
actix-web = "4"
sqlx = { version = "0.6.2", features = [ "runtime-actix-native-tls", "postgres", "json", "chrono", "migrate", "macros" ] }
serde_json = "1.0.86"
chrono = { version = "0.4.22", features = [ "serde" ] }
serde = "1.0.145"
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"