[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo-net = "0.2.4"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.33"
yew-router = "0.16"
common = { path= "../common"}